--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
   --mondrian-yellow: #fac901;
   --mondrian-red: #dd0100;
   --mondrian-blue: #225095;
+  --mondrian-blue-alpha: rgba(34 80 149 / .1);
 }
 
 * { box-sizing: border-box; }
@@ -14,17 +15,6 @@ body {
 h1, h2 {
   font-family: 'Open Sans', sans-serif;
 }
-
-/*------------------ header styles ------------------*/
-.propic {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  border: solid 1px rgba(0,0,0,.125);
-  background-color: #fff;
-  padding: .5rem;
-}
-
 
 
 /*-------------------- nav styles --------------------*/
@@ -59,7 +49,7 @@ nav {
 
 .nav-items li:hover {
   background-color: var(--shrub-green);
-  transition: 0.3s;
+
 }
 
 nav li {
@@ -76,9 +66,10 @@ nav li a {
 }
 
 nav li a:hover {
-  border-bottom: var(--mondrian-yellow) 1px solid;
+  border-bottom: var(--mondrian-red) 1px solid;
   margin-bottom: -1px;
-  color: var(--mondrian-red);
+  color: var(--mondrian-yellow);
+  transition: 0.3s;
 }
 
 /* .navbar-toggle is div holding hamburger icon, not icon itself */
@@ -87,7 +78,7 @@ nav li a:hover {
   right: 0;
   top: 0;
   cursor: pointer;
-  /* color: rgba(255 255 255 / 0.7); */
+  color: rgba(0 0 0 / 0.7);
   border-radius: 5px;
   width: 40px;
   height: 40px;
@@ -106,15 +97,34 @@ nav li a:hover {
 .fa-bars { transition: transform .3s ease-in;  }
 .fa-bars:hover { transform: rotate(-90deg); }
 
-/*--- box with name, title and picture -----*/
+/*--------------- header styles ---------------*/
+/*---- (box with name, title and picture) -----*/
+.propic {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: solid 1px rgba(0,0,0,.125);
+  background-color: #fff;
+  padding: .5rem;
+}
+
+.propic:hover {
+  border: solid 1px var(--mondrian-yellow);
+}
+
+
 .center {
-  margin: 2em;
+  margin-top: 1.5em;
   padding: 2em;
   background-color: rgb(248, 249, 250);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+}
+
+.center:hover {
+  outline: 1px solid var(--mondrian-blue-alpha);
 }
 
 
@@ -209,6 +219,9 @@ footer {
 /*-------------------- media queries --------------------*/
 /* 640 px */
 @media screen and (min-width: 40em) {
+  .center {
+    margin: 0 2em 2em 2em;
+  }
   .navbar { display: flex; }
   .navbar-toggle { visibility: hidden; }
   .nav-items {
@@ -225,8 +238,6 @@ footer {
   }
 
   .nav-items li a { letter-spacing: 0.08rem; }
-
-
 
   .cards {
       display: flex;
