--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
   --mondrian-red: #dd0100;
   --mondrian-blue: #225095;
   --mondrian-blue-alpha: rgba(34 80 149 / .1);
+  --mondrian-white: #f9f9f9;
+  --mondrian-black: #30303a;
 }
 
 * { box-sizing: border-box; }
@@ -45,11 +47,6 @@ nav {
   text-align: center;
   margin: 0 auto;
   width: 100%;
-}
-
-.nav-items li:hover {
-  background-color: var(--shrub-green);
-
 }
 
 nav li {
@@ -103,30 +100,20 @@ nav li a:hover {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  border: solid 1px rgba(0,0,0,.125);
+  border: solid 1px rgba(249, 249, 249, .125);
   background-color: #fff;
   padding: .5rem;
 }
 
-.propic:hover {
-  border: solid 1px var(--mondrian-yellow);
-}
-
-
 .center {
-  margin-top: 1.5em;
+  margin: 1.5em .5em .5em;
   padding: 2em;
-  background-color: rgb(248, 249, 250);
+  background-color: var(--mondrian-blue-alpha);
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
 }
-
-.center:hover {
-  outline: 1px solid var(--mondrian-blue-alpha);
-}
-
 
 /*-------------------- body styles --------------------*/
 main {
@@ -155,7 +142,7 @@ main {
 }
 
 .card a:hover {
-	box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
+	box-shadow: 3px 3px 8px hsla(216, 63%, 36%, .2);
 }
 
 .card-content {
