--- a/contact.css
+++ b/contact.css
@@ -8,7 +8,6 @@
 form { max-width:420px; margin:50px auto; }
 
 .feedback-input {
-  color:white;
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
   font-size: 18px;
@@ -30,6 +29,7 @@ textarea {
   height: 150px;
   line-height: 150%;
   resize:vertical;
+  color: #000;
 }
 
 [type="submit"] {
