--- a/css/contact.css
+++ b/css/contact.css
@@ -1,11 +1,29 @@
-.form {
-    margin-bottom: 5em;
-}
-
 
 @import url(https://fonts.googleapis.com/css?family=Montserrat:400,700);
 
-form { max-width:420px; margin:50px auto; }
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.form {
+  margin-bottom: 2em;
+}
+form { 
+  max-width:420px; 
+  margin:50px auto; 
+}
+
+.introduction {
+  margin-top: 3em;
+}
+
+.introduction h3 {
+  margin-bottom: 0;
+  font-family: 'Raleway', sans-serif;
+}
 
 .feedback-input {
   font-family: Helvetica, Arial, sans-serif;
