Adjusts banner margin

--- a/css/style.css
+++ b/css/style.css
@@ -138,6 +138,10 @@ nav li a:hover {
   flex-direction: column;
 }
 
+.banner {
+  margin-bottom: 3em;
+}
+
 /*-------------------- body styles --------------------*/
 main {
   padding-bottom: 2.5rem;  
