Adjusts form text color dark mode

--- a/css/contact.css
+++ b/css/contact.css
@@ -26,6 +26,7 @@ form {
 }
 
 .feedback-input {
+  color: var(--text-color);
   font-family: Helvetica, Arial, sans-serif;
   font-weight:500;
   font-size: 18px;
