--- a/css/style.css
+++ b/css/style.css
@@ -211,7 +211,8 @@ main {
 
 .card-content {
 	padding: 1.4em;
-  color: var(--text-color)
+  color: var(--text-color);
+  height: 100%;
 }
 
 .card-content h2 {
