--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
   --navbar-toggle: #f9f9f9;
   --mondrian-red: #ff1e1e;
   --card-background: rgb(83, 82, 82);
-  --card-shadow: 5px 5px 8px rgba(200, 212, 228, 0.3);
+  --card-shadow: 4px 5px 15px 3px rgba(1, 16, 36, 0.87);
 }
 
 * { box-sizing: border-box; }
@@ -28,7 +28,7 @@ body {
   --mondrian-blue: #225095;
   --navbar-toggle: rgba(0 0 0 / 0.7);
   --card-background: #f9f9f9;
-  --card-shadow: 3px 3px 8px hsla(216, 63%, 36%, .2);
+  --card-shadow: 4px 5px 15px 3px rgba(17, 43, 82, 0.445);
   background-color: var(--background-color);
   color: var(--text-color);
   position: relative;
