--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
   --mondrian-blue: #5c9af7;
   --navbar-toggle: #f9f9f9;
   --mondrian-red: #ff1e1e;
+  --mondrian-white: #225095;
   --card-background: rgb(83, 82, 82);
   --card-shadow: 4px 5px 15px 3px rgba(1, 16, 36, 0.87);
 }
@@ -154,7 +155,7 @@ nav li a:hover {
   height: 100px;
   border-radius: 50%;
   border: solid 1px rgba(249, 249, 249, .125);
-  background-color: #fff;
+  background-color: var(--mondrian-white);
   padding: .5rem;
   margin: .4em;
 }
