--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,21 @@
 .introduction {
     margin-bottom: 5em;
 }
+
+figure {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 6em;
+}
+
+figcaption {
+    margin-top: 1em;
+}
+
+figure img {
+    width: 80%;
+    height: auto;
+    max-width: 400px;
+}
