Lightens dark mode blue

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
   --background-color: #3F3F3F;
   --text-color: #fff;
   --name-backdrop: rgb(6, 0, 59);
-  --mondrian-blue: #5c9af7;
+  --mondrian-blue: #72a7f6;
   --navbar-toggle: #f9f9f9;
   --mondrian-red: #ff1e1e;
   --mondrian-white: #225095;
