--- a/css/resume.css
+++ b/css/resume.css
@@ -9,7 +9,6 @@
     font-style: italic;
 }
 
-
 .skill-list {
     columns: 2;
 }
@@ -92,3 +91,23 @@ a[target="_blank"]:after {
 	position:relative;
 	top:1px;
 }
+
+/* media queries */
+@media screen and (max-width: 550px) {
+    main.container {
+        padding: 4px 0;
+        margin: 0px 4px; 
+    }
+
+    .projects ul {
+        padding-left: .25em;
+    }
+
+    .projects li {
+        list-style: none;
+    }
+
+    .social {
+        margin-top: 2em;
+    }
+} 
