--- a/css/resume.css
+++ b/css/resume.css
@@ -2,7 +2,7 @@
     margin-bottom: 0;
 }
 
-.float-right {
+.float-right, .float-right-edu {
     float: right;
     text-align: right;
     margin-bottom: 0;
@@ -101,7 +101,7 @@ a[target="_blank"]:after {
         flex-direction: column;
     }
 
-    .float-right {
+    .float-right-edu {
         display: inline-block;
         margin: 0 auto;
         float: none;
