--- a/css/resume.css
+++ b/css/resume.css
@@ -2,7 +2,7 @@
     margin-bottom: 0;
 }
 
-.float-right, .float-right-edu {
+.float-right {
     float: right;
     text-align: right;
     margin-bottom: 0;
@@ -22,6 +22,10 @@
 .contact-info {
     margin-left: auto;
     text-align: right;
+}
+
+.container {
+    max-width: 800px;
 }
 
 .container a {
@@ -101,7 +105,7 @@ a[target="_blank"]:after {
         flex-direction: column;
     }
 
-    .float-right-edu {
+    .float-right.grad-date {
         display: inline-block;
         margin: 0 auto;
         float: none;
