darkens dark mode background

--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 
 .dark {
-  --background-color: #3F3F3F;
+  --background-color: #292929;
   --text-color: #fff;
   --name-backdrop: rgb(6, 0, 59);
   --mondrian-blue: #72a7f6;
