--- a/includes/navigation.html
+++ b/includes/navigation.html
@@ -1,5 +1,5 @@
-<nav class="navbar">
-  <ul class="nav-items">
+<!-- <nav class="navbar">
+  <ul class="nav-items nav-tabs">
     <li><a href="index.html" class="nav-item">home</a></li>
     <li><a href="resume.html" class="nav-item">resume</a></li>
     <li><a href="projects.html" class="nav-item">projects</a></li>
@@ -8,5 +8,35 @@
   </ul>
   <div class="navbar-toggle" id="navbar-toggle">
     <i class="fas fa-bars"></i>
+  </div>
+</nav> -->
+
+<nav class="navbar navbar-expand-sm navbar-light bg-light my-2">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">
+      <img src="../img/dc-logo-mondrian-colors.svg" alt="logo " width="40" height="40">
+    </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav nav-items">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="resume.html">resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="about.html">about</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="contact.html">contact</a>
+        </li>
+      </ul>
+    </div>
   </div>
 </nav>
