--- a/css/resume.css
+++ b/css/resume.css
@@ -24,22 +24,16 @@
     text-align: right;
 }
 
-.container {
-    max-width: 800px;
-}
+.container { max-width: 700px; }
 
 .container a {
     text-decoration: none;
     color: var(--mondrian-red);
 }
 
-.container a:hover {
-    color: var(--mondrian-blue);
-}
+.container a:hover { color: var(--mondrian-blue); }
 
-.container a:active {
-    color: var(--mondrian-yellow);
-}
+.container a:active { color: var(--mondrian-yellow); }
 
 .section-title {
     margin: 1em 0;
@@ -51,6 +45,10 @@
 }
 
 .experience { margin-bottom: 4em; }
+
+.job-title, p.employer { margin-bottom: 0; }
+
+p.employer { font-family: 'Raleway', sans-serif; }
 
 .social { margin: 1rem 0; }
 
