--- a/css/about.css
+++ b/css/about.css
@@ -1,21 +1,29 @@
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
 .introduction {
-    margin-bottom: 2em;
+  margin: 0 0.5rem 1rem 0.5rem;
+  font-size: 1.125rem;
 }
 
 figure {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    margin-bottom: 2em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-bottom: 2em;
 }
 
 figcaption {
-    margin-top: 1em;
+  margin-top: 1em;
 }
 
 figure img {
-    width: 60%;
-    height: auto;
-    max-width: 500px;
+  width: 60%;
+  height: auto;
+  max-width: 500px;
 }
