--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,19 @@
 :root {
   --mondrian-yellow: #fac901;
   --mondrian-red: #dd0100;
-  --mondrian-red-pale: rgb(221, 1, 0, .3);
+  --mondrian-red-pale: rgb(221, 1, 0, 0.3);
   --mondrian-blue: #225095;
   --mondrian-white: #f9f9f9;
   --mondrian-black: #30303a;
-  --name-backdrop: rgba(34 80 149 / .08);
+  --name-backdrop: rgba(34 80 149 / 0.08);
   --background-color: #f9f9f9;
   --card-background: #f9f9f9;
   --card-shadow: 4px 5px 15px 3px rgba(17, 43, 82, 0.445);
 }
 
-* { box-sizing: border-box; }
+* {
+  box-sizing: border-box;
+}
 
 body {
   background-color: var(--background-color);
@@ -21,20 +23,31 @@ body {
 }
 
 /*-------------------- typography -------------------*/
-h1, h2 { font-family: 'Raleway', sans-serif; }
+h1,
+h2 {
+  font-family: 'Raleway', sans-serif;
+}
 
-h3 { font-family: 'Outfit', sans-serif; }
+h3 {
+  font-family: 'Outfit', sans-serif;
+}
 
 p a:link {
   text-decoration: none;
   color: var(--mondrian-red);
 }
 
-p a:visited { color:var(--mondrian-yellow); }
+p a:visited {
+  color: var(--mondrian-yellow);
+}
 
-p a:hover { color: var(--mondrian-blue); }
+p a:hover {
+  color: var(--mondrian-blue);
+}
 
-p a:active { color: var(--mondrian-black); } 
+p a:active {
+  color: var(--mondrian-black);
+}
 
 /*-------------------- nav styles --------------------*/
 nav {
@@ -48,7 +61,9 @@ nav.navbar {
   width: 100%;
 }
 
-.nav-items { display: flex; }
+.nav-items {
+  display: flex;
+}
 
 .nav-items li {
   text-align: center;
@@ -78,21 +93,21 @@ nav li a:hover {
 /*---- (box with name, title and picture) -----*/
 header {
   margin: 0 auto;
-  max-width: 1400px;
+  max-width: 1000px;
 }
 
 .propic {
   width: 100px;
   height: 100px;
   border-radius: 50%;
-  border: solid 1px rgba(249, 249, 249, .125);
+  border: solid 1px rgba(249, 249, 249, 0.125);
   background-color: var(--mondrian-white);
-  padding: .5rem;
-  margin: .4em;
+  padding: 0.5rem;
+  margin: 0.4em;
 }
 
 .center {
-  margin: 0 .5em .5em .5em;
+  margin: 0 0.5em 0.5em 0.5em;
   padding: 0 1em;
   background-color: var(--name-backdrop);
   display: flex;
@@ -102,10 +117,16 @@ header {
 }
 
 /* --------- main --------- */
+.max-seven {
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 1.125rem;
+}
 
 /*-------- footer styles -------*/
-#footer { 
-  position: relative; 
+#footer {
+  position: relative;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -113,25 +134,41 @@ header {
   height: 4rem;
 }
 
-.social { margin-bottom: .5em; }
+.social {
+  margin-bottom: 0.5em;
+}
 
-.social a { color: var(--background-color) }
+.social a {
+  color: var(--background-color);
+}
 
-.social a:hover { color: var(--background-color) }
+.social a:hover {
+  color: var(--background-color);
+}
 
-#footer .social i { 
+#footer .social i {
   color: var(--mondrian-blue);
   margin: 0 20px;
 }
 
-.social i:hover {  color: var(--mondrian-yellow); }
+.social i:hover {
+  color: var(--mondrian-yellow);
+}
 
-.social i:active { color: var(--mondrian-red); }
+.social i:active {
+  color: var(--mondrian-red);
+}
 
 /*-------------------- media queries --------------------*/
 /* 640 px */
 @media screen and (min-width: 40em) {
-  .center { margin: 0 2em 0 2em; }
-  .navbar-toggler { margin-right: 1em; }
-  .navbar-brand { margin-left: 1em; }
+  .center {
+    margin: 0 2em 0 2em;
+  }
+  .navbar-toggler {
+    margin-right: 1em;
+  }
+  .navbar-brand {
+    margin-left: 1em;
+  }
 }
