change btn styles

--- a/css/resume.css
+++ b/css/resume.css
@@ -96,30 +96,39 @@ p.employer {
 }
 
 .download-btn {
-  box-shadow: inset 0px 1px 0px 0px #f29c93;
-  background: linear-gradient(to bottom, #fe1a00 5%, #ce0100 100%);
-  background-color: var(--mondrian-red);
-  border-radius: 6px;
-  border: 1px solid #d83526;
-  display: inline-block;
+  background-color: #e1ecf4;
+  border-radius: 3px;
+  border: 1px solid #7aa7c7;
+  box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
+  box-sizing: border-box;
+  color: #39739d;
   cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 9px 18px;
-  text-decoration: none;
-  text-shadow: 0px 1px 0px #b23e35;
-}
-
-.download-btn:hover {
-  background: linear-gradient(to bottom, #ce0100 5%, #fe1a00 100%);
-  background-color: #ce0100;
-}
-
-.download-btn:active {
+  display: inline-block;
+  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 1.15385;
+  margin: 0;
+  outline: none;
+  padding: 8px .8em;
   position: relative;
-  top: 1px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  white-space: nowrap;
+}
+
+.download-btn:hover,
+ .download-btn:focus {
+  background-color: #b3d3ea;
+  color: #2c5777;
+}
+
+.download-btn:focus {
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
 }
 
 /* media queries */
