--- a/includes/banner.html
+++ b/includes/banner.html
@@ -1,5 +1,5 @@
 <div class="center">
-  <img class="propic" src="img/profile-pic-circle.png" alt="" />
+  <img class="propic" src="img/pro-pic.png" alt="" />
   <div class="name-container">
     <h1>David Calabrese</h1>
   </div>
