Add in dark mode option

--- a/includes/banner.html
+++ b/includes/banner.html
@@ -1,6 +1,6 @@
 <div class="center">
-  <img class="propic" src="img/pro-pic.png" alt="" />
-  <div class="name-container">
+  <img class="propic" src="img/pro-pic.jpg" alt="Headshot of the developer" />
+  <div>
     <h1>David Calabrese</h1>
   </div>
   <h2>Software Developer</h2>
