--- a/css/contact.css
+++ b/css/contact.css
@@ -14,7 +14,7 @@
   margin-top: 1rem;
 }
 
-form {
+.contact-form {
   max-width: 420px;
   margin: 2rem auto;
 }
@@ -25,7 +25,7 @@ form {
 
 .introduction h3 {
   margin-bottom: 0;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .feedback-input {
@@ -56,8 +56,8 @@ textarea {
   color: #000;
 }
 
-[type='submit'] {
-  font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+[type="submit"] {
+  font-family: "Montserrat", Arial, Helvetica, sans-serif;
   width: 100%;
   background: var(--mondrian-red);
   border-radius: 5px;
@@ -71,6 +71,6 @@ textarea {
   margin-top: -4px;
   font-weight: 700;
 }
-[type='submit']:hover {
+[type="submit"]:hover {
   background: var(--mondrian-red-pale);
 }
