--- a/css/index.css
+++ b/css/index.css
@@ -18,7 +18,7 @@ main {
 .large-text p {
   font-size: 1.25rem;
   text-align: start;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 #footer {
