--- a/css/resume.css
+++ b/css/resume.css
@@ -1,5 +1,5 @@
 main {
-  background-color: rgb(245, 245, 245);
+  background-color: var(--backdrop);
   padding: 0.25rem 0.5rem;
   border-radius: 3px;
 }
@@ -77,7 +77,7 @@ p.employer {
 }
 
 p.employer {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .social {
@@ -96,21 +96,21 @@ p.employer {
 }
 
 .download-btn {
-  background-color: #e1ecf4;
+  background-color: var(--mondrian-yellow);
   border-radius: 3px;
   border: 1px solid #7aa7c7;
-  box-shadow: rgba(255, 255, 255, .7) 0 1px 0 0 inset;
+  box-shadow: rgba(255, 255, 255, 0.7) 0 1px 0 0 inset;
   box-sizing: border-box;
-  color: #39739d;
+  color: black;
+  font-size: 16px;
   cursor: pointer;
   display: inline-block;
-  font-family: -apple-system,system-ui,"Segoe UI","Liberation Sans",sans-serif;
-  font-size: 13px;
-  font-weight: 400;
+  font-family: -apple-system, system-ui, "Segoe UI", "Liberation Sans",
+    sans-serif;
   line-height: 1.15385;
   margin: 0;
   outline: none;
-  padding: 8px .8em;
+  padding: 8px 0.8em;
   position: relative;
   text-align: center;
   text-decoration: none;
@@ -122,13 +122,13 @@ p.employer {
 }
 
 .download-btn:hover,
- .download-btn:focus {
-  background-color: #b3d3ea;
-  color: #2c5777;
+.download-btn:focus {
+  background-color: var(--mondrian-pale-yellow);
+  color: #000000;
 }
 
 .download-btn:focus {
-  box-shadow: 0 0 0 4px rgba(0, 149, 255, .15);
+  box-shadow: 0 0 0 4px rgba(0, 149, 255, 0.15);
 }
 
 /* media queries */
