--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,105 @@
 :root {
   --mondrian-yellow: #fac901;
+  --mondrian-pale-yellow: #f7dc71;
   --mondrian-red: #dd0100;
   --mondrian-red-pale: rgb(221, 1, 0, 0.3);
   --mondrian-blue: #225095;
   --mondrian-white: #f9f9f9;
   --mondrian-black: #30303a;
-  --name-backdrop: rgba(34 80 149 / 0.08);
-  --background-color: #f9f9f9;
-  --card-background: #f9f9f9;
+  --backdrop: rgba(34 80 149 / 0.08);
+  --secondary-background: #f9f9f9;
   --card-shadow: 4px 5px 15px 3px rgba(17, 43, 82, 0.445);
+  --download-btn: #e1ecf4;
+  --text-color: #30303a;
 }
 
-* {
-  box-sizing: border-box;
+:where(html) {
+  --darkmode: 0;
+  container-name: root;
+  container-type: normal;
 }
 
 body {
   background-color: var(--background-color);
   color: var(--text-color);
-  position: relative;
-  font-family: Calibri, Arial, sans-serif;
+  color-scheme: light dark;
+}
+
+@media (prefers-color-scheme: dark) {
+  html {
+    --darkmode: 1;
+  }
+}
+@media (prefers-color-scheme: light) {
+  html {
+    --darkmode: 0;
+  }
+}
+
+html:has(#color-scheme-light:checked) {
+  --darkmode: 0;
+}
+html:has(#color-scheme-dark:checked) {
+  --darkmode: 1;
+}
+
+@container root style(--darkmode: 1) {
+  body {
+    --background-color: #111010;
+    --text-color: hsl(228, 5%, 80%);
+    --backdrop: rgba(34 80 149 / 0.08);
+    --mondrian-yellow: #fac901;
+    --mondrian-red: #f43e3e;
+    --mondrian-red-pale: rgb(221, 1, 0, 0.3);
+    --mondrian-blue: #5790e5;
+    --secondary-background: #242424;
+    --card-shadow: 4px 5px 15px 3px rgba(17, 43, 82, 0.445);
+  }
+}
+
+.toggle-container {
+  position: absolute;
+  top: 10px;
+  right: 1rem;
+  font-size: 12px;
+}
+.toggle-group {
+  border: 1px solid #ccc;
+  border-radius: 24px;
+  inline-size: fit-content;
+  padding: 3px;
+}
+.toggle-group label {
+  border-radius: 21px;
+  cursor: pointer;
+  display: inline-flex;
+  padding: 0.5em 1em;
+  text-align: center;
+  user-select: none;
+}
+.toggle-group label:has(input:checked) {
+  background-color: #ccc;
+  color: #333;
+}
+
+[data-sr] {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
 }
 
 /*-------------------- typography -------------------*/
 h1,
 h2 {
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 h3 {
-  font-family: 'Outfit', sans-serif;
+  font-family: "Outfit", sans-serif;
 }
 
 p a:link {
@@ -94,10 +164,9 @@ nav li a {
 }
 
 /*--------------- header styles ---------------*/
-/*---- (box with name, title and picture) -----*/
 header {
   margin: 0 auto;
-  max-width: 1000px;
+  max-width: 800px;
 }
 
 .propic {
@@ -105,15 +174,20 @@ header {
   height: 100px;
   border-radius: 50%;
   border: solid 1px rgba(249, 249, 249, 0.125);
-  background-color: var(--mondrian-white);
+  background-color: var(--secondary-background);
   padding: 0.5rem;
   margin: 0.4em;
+}
+
+.banner-container {
+  margin: 0 auto;
 }
 
 .center {
   margin: 0 0.5em 0.5em 0.5em;
   padding: 0 1em;
-  background-color: var(--name-backdrop);
+  background-color: var(--backdrop);
+  max-width: 725px;
   display: flex;
   align-items: center;
   justify-content: center;
