--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,13 +1,17 @@
 <footer id="footer">
-  <div class="social">
-    <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
-      <i class="fab fa-linkedin fa-2x"></i>
-    </a>
-    <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
-      <i class="fab fa-github fa-2x"></i>
-    </a>
-    <a href="https://www.facebook.com/david.calabrese.334/">
-      <i class="fab fa-facebook fa-2x"></i>
-    </a>
+  <div>
+
+    <div class="social">
+      <a href="https://www.linkedin.com/in/david-calabrese-6828731a3/">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/davidtcalabrese" target="_blank" rel="noreferrer noopener">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://www.facebook.com/david.calabrese.334/">
+        <i class="fab fa-facebook"></i>
+      </a>
+    </div>
   </div>
+
 </footer>
